--- a/index.html
+++ b/index.html
@@ -4,33 +4,7 @@
         <meta name="viewport" content="width=device-width , initial-scale=1.0" />
         <meta charset="utf-8" />
         <title>HW1-歌詞頁面</title>
-        <style>
-            header {
-                background-color: darkcyan;
-                color: white;
-                padding-top: 30px;
-                padding-bottom: 10px;
-            }
-
-            main{
-                text-align: center;
-                background-color: lightblue;
-                padding-top: 30px;
-                padding-bottom: 30px;
-            }
-
-            .headline {
-                text-align: center;
-            }
-
-            .footer {
-                font-size: 60%;
-                text-align: center;
-                padding: 15px;
-                background-color: darkcyan;
-            }
-
-        </style>
+	<link rel="stylesheet" type="text/css" href="index.css" />
     </head>
     <body>
         <header>
