--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width , initial-scale=1.0" />
         <meta charset="utf-8" />
-        <title>HW1-歌詞頁面</title>
+        <title>我的頁面</title>
 	<link rel="stylesheet" type="text/css" href="index.css" />
     </head>
     <body>
